@@ -26,10 +26,10 @@ public class RegelBeregnFeriepengerTest {
     private Arbeidsforhold arbeidsforhold1 = Arbeidsforhold.nyttArbeidsforholdHosVirksomhet("123456789");
     private Arbeidsforhold arbeidsforhold2 = Arbeidsforhold.nyttArbeidsforholdHosVirksomhet("987654321");
 
+    // Eksempler tatt fra
+    // https://confluence.adeo.no/display/MODNAV/27c+Beregn+feriepenger+PK-51965+OMR-49
 
-    //Eksempler tatt fra https://confluence.adeo.no/display/MODNAV/27c+Beregn+feriepenger+PK-51965+OMR-49
-
-    //Eksempel 1 Mor
+    // Eksempel 1 Mor
     @Test
     public void skalBeregneFeriepengerForMor() {
         BeregningsresultatPeriode periode1 = byggBRPeriode(LocalDate.of(2018, 1, 6), LocalDate.of(2018, 3, 9));
@@ -39,20 +39,20 @@ public class RegelBeregnFeriepengerTest {
         byggAndelerForPeriode(periode2, 150, 400, arbeidsforhold1);
 
         BeregningsresultatPeriode periode1annenPart = byggBRPeriode(LocalDate.of(2018, 3, 10), LocalDate.of(2018, 3, 16));
-        BeregningsresultatPeriode periode2annenPart  = byggBRPeriode(LocalDate.of(2018, 3, 17), LocalDate.of(2018, 3, 31));
+        BeregningsresultatPeriode periode2annenPart = byggBRPeriode(LocalDate.of(2018, 3, 17), LocalDate.of(2018, 3, 31));
         byggAndelerForPeriode(periode1annenPart, 200, 0, arbeidsforhold1);
         byggAndelerForPeriode(periode2annenPart, 300, 0, arbeidsforhold1);
 
         List<BeregningsresultatPeriode> annenPartsBeregningsresultatPerioder = List.of(periode1annenPart, periode2annenPart);
         BeregningsresultatFeriepengerRegelModell regelModell = BeregningsresultatFeriepengerRegelModell.builder()
-            .medBeregningsresultatPerioder(List.of(periode1, periode2))
-            .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
-            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-            .medErForelder1(true)
-            .medAntallDagerFeriepenger(60)
-            .build();
+                .medBeregningsresultatPerioder(List.of(periode1, periode2))
+                .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
+                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+                .medErForelder1(true)
+                .medAntallDagerFeriepenger(60)
+                .build();
 
         RegelBeregnFeriepenger regel = new RegelBeregnFeriepenger();
         Evaluation evaluation = regel.evaluer(regelModell);
@@ -62,8 +62,8 @@ public class RegelBeregnFeriepengerTest {
         assertThat(regelModell.getFeriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 1, 6));
         assertThat(regelModell.getFeriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 3, 23));
 
-        regelModell.getBeregningsresultatPerioder().stream().flatMap(p->p.getBeregningsresultatAndelList().stream())
-            .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
+        regelModell.getBeregningsresultatPerioder().stream().flatMap(p -> p.getBeregningsresultatAndelList().stream())
+                .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
         BeregningsresultatAndel andelBruker1 = periode1.getBeregningsresultatAndelList().get(0);
         BeregningsresultatAndel andelArbeidsgiver1 = periode1.getBeregningsresultatAndelList().get(1);
         BeregningsresultatAndel andelBruker2 = periode1.getBeregningsresultatAndelList().get(2);
@@ -73,13 +73,15 @@ public class RegelBeregnFeriepengerTest {
 
         assertThat(andelBruker1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(1606.5));
         assertThat(andelBruker2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(459));
-        assertThat(andelArbeidsgiver1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2754));
-        assertThat(andelArbeidsgiver2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2295));
+        assertThat(andelArbeidsgiver1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
+                .isEqualByComparingTo(BigDecimal.valueOf(2754));
+        assertThat(andelArbeidsgiver2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
+                .isEqualByComparingTo(BigDecimal.valueOf(2295));
         assertThat(andelBruker3.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(76.5));
         assertThat(andelArbeidsgiver3.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(204));
     }
 
-    //Eksempel 1X Mor med avslag i første periode
+    // Eksempel 1X Mor med avslag i første periode
     @Test
     public void skalBeregneFeriepengerForMorMedAvslagIFørstePeriode() {
         BeregningsresultatPeriode periode0 = byggBRPeriode(LocalDate.of(2018, 1, 5), LocalDate.of(2018, 1, 5));
@@ -91,20 +93,20 @@ public class RegelBeregnFeriepengerTest {
         byggAndelerForPeriode(periode2, 150, 400, arbeidsforhold1);
 
         BeregningsresultatPeriode periode1annenPart = byggBRPeriode(LocalDate.of(2018, 3, 10), LocalDate.of(2018, 3, 16));
-        BeregningsresultatPeriode periode2annenPart  = byggBRPeriode(LocalDate.of(2018, 3, 17), LocalDate.of(2018, 3, 31));
+        BeregningsresultatPeriode periode2annenPart = byggBRPeriode(LocalDate.of(2018, 3, 17), LocalDate.of(2018, 3, 31));
         byggAndelerForPeriode(periode1annenPart, 200, 0, arbeidsforhold1);
         byggAndelerForPeriode(periode2annenPart, 300, 0, arbeidsforhold1);
 
         List<BeregningsresultatPeriode> annenPartsBeregningsresultatPerioder = List.of(periode1annenPart, periode2annenPart);
         BeregningsresultatFeriepengerRegelModell regelModell = BeregningsresultatFeriepengerRegelModell.builder()
-            .medBeregningsresultatPerioder(List.of(periode0, periode1, periode2))
-            .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
-            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-            .medErForelder1(true)
-            .medAntallDagerFeriepenger(60)
-            .build();
+                .medBeregningsresultatPerioder(List.of(periode0, periode1, periode2))
+                .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
+                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+                .medErForelder1(true)
+                .medAntallDagerFeriepenger(60)
+                .build();
 
         RegelBeregnFeriepenger regel = new RegelBeregnFeriepenger();
         Evaluation evaluation = regel.evaluer(regelModell);
@@ -114,14 +116,14 @@ public class RegelBeregnFeriepengerTest {
         assertThat(regelModell.getFeriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 1, 6));
         assertThat(regelModell.getFeriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 3, 23));
 
-        regelModell.getBeregningsresultatPerioder().stream().flatMap(p->p.getBeregningsresultatAndelList().stream())
-            .forEach(andel -> {
-                if (andel.getDagsats() > 0) {
-                    assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1);
-                } else {
-                    assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).isEmpty();
-                }
-            });
+        regelModell.getBeregningsresultatPerioder().stream().flatMap(p -> p.getBeregningsresultatAndelList().stream())
+                .forEach(andel -> {
+                    if (andel.getDagsats() > 0) {
+                        assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1);
+                    } else {
+                        assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).isEmpty();
+                    }
+                });
         BeregningsresultatAndel andelBruker1 = periode1.getBeregningsresultatAndelList().get(0);
         BeregningsresultatAndel andelArbeidsgiver1 = periode1.getBeregningsresultatAndelList().get(1);
         BeregningsresultatAndel andelBruker2 = periode1.getBeregningsresultatAndelList().get(2);
@@ -131,18 +133,20 @@ public class RegelBeregnFeriepengerTest {
 
         assertThat(andelBruker1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(1606.5));
         assertThat(andelBruker2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(459));
-        assertThat(andelArbeidsgiver1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2754));
-        assertThat(andelArbeidsgiver2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2295));
+        assertThat(andelArbeidsgiver1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
+                .isEqualByComparingTo(BigDecimal.valueOf(2754));
+        assertThat(andelArbeidsgiver2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
+                .isEqualByComparingTo(BigDecimal.valueOf(2295));
         assertThat(andelBruker3.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(76.5));
         assertThat(andelArbeidsgiver3.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(204));
     }
 
-    //Eksempel 1 Far
+    // Eksempel 1 Far
     @Test
     public void skalBeregneFeriepengerForFar() {
-        //Arrange
+        // Arrange
         BeregningsresultatPeriode periode1annenPart = byggBRPeriode(LocalDate.of(2018, 1, 6), LocalDate.of(2018, 3, 9));
-        BeregningsresultatPeriode periode2annenPart  = byggBRPeriode(LocalDate.of(2018, 3, 10), LocalDate.of(2018, 3, 16));
+        BeregningsresultatPeriode periode2annenPart = byggBRPeriode(LocalDate.of(2018, 3, 10), LocalDate.of(2018, 3, 16));
         byggAndelerForPeriode(periode1annenPart, 0, 1, arbeidsforhold1);
         byggAndelerForPeriode(periode2annenPart, 0, 1, arbeidsforhold1);
         List<BeregningsresultatPeriode> annenPartsBeregningsresultatPerioder = List.of(periode1annenPart, periode2annenPart);
@@ -153,26 +157,26 @@ public class RegelBeregnFeriepengerTest {
         byggAndelerForPeriode(periode2, 460, 1000, arbeidsforhold1);
 
         BeregningsresultatFeriepengerRegelModell regelModell = BeregningsresultatFeriepengerRegelModell.builder()
-            .medBeregningsresultatPerioder(List.of(periode1, periode2))
-            .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
-            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-            .medErForelder1(false)
-            .medAntallDagerFeriepenger(60)
-            .build();
-        //Act
+                .medBeregningsresultatPerioder(List.of(periode1, periode2))
+                .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
+                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+                .medErForelder1(false)
+                .medAntallDagerFeriepenger(60)
+                .build();
+        // Act
         RegelBeregnFeriepenger regel = new RegelBeregnFeriepenger();
         Evaluation evaluation = regel.evaluer(regelModell);
         String sporing = EvaluationSerializer.asJson(evaluation);
 
-        //Assert
+        // Assert
         assertThat(sporing).isNotNull();
         assertThat(regelModell.getFeriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 1, 6));
         assertThat(regelModell.getFeriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 3, 23));
 
-        regelModell.getBeregningsresultatPerioder().stream().flatMap(p->p.getBeregningsresultatAndelList().stream())
-            .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
+        regelModell.getBeregningsresultatPerioder().stream().flatMap(p -> p.getBeregningsresultatAndelList().stream())
+                .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
         BeregningsresultatAndel andelBruker1 = periode1.getBeregningsresultatAndelList().get(0);
         BeregningsresultatAndel andelArbeidsgiver1 = periode1.getBeregningsresultatAndelList().get(1);
         BeregningsresultatAndel andelBruker2 = periode2.getBeregningsresultatAndelList().get(0);
@@ -184,7 +188,7 @@ public class RegelBeregnFeriepengerTest {
         assertThat(andelArbeidsgiver2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(510));
     }
 
-    //Eksempel 2 Mor
+    // Eksempel 2 Mor
     @Test
     public void skalBeregneFeriepengerForMorEksempel2() {
         BeregningsresultatPeriode periode1 = byggBRPeriode(LocalDate.of(2018, 1, 17), LocalDate.of(2018, 3, 20));
@@ -195,19 +199,19 @@ public class RegelBeregnFeriepengerTest {
         byggAndelerForPeriode(periode2, 0, 0, arbeidsforhold1);
         byggAndelerForPeriode(periode3, 350, 600, arbeidsforhold1);
 
-        BeregningsresultatPeriode periode1annenPart = byggBRPeriode(LocalDate.of(2018, 3, 21),  LocalDate.of(2018, 4, 15));
+        BeregningsresultatPeriode periode1annenPart = byggBRPeriode(LocalDate.of(2018, 3, 21), LocalDate.of(2018, 4, 15));
         byggAndelerForPeriode(periode1annenPart, 500, 0, arbeidsforhold1);
         List<BeregningsresultatPeriode> annenPartsBeregningsresultatPerioder = List.of(periode1annenPart);
 
         BeregningsresultatFeriepengerRegelModell regelModell = BeregningsresultatFeriepengerRegelModell.builder()
-            .medBeregningsresultatPerioder(List.of(periode1, periode2, periode3))
-            .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
-            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-            .medErForelder1(true)
-            .medAntallDagerFeriepenger(60)
-            .build();
+                .medBeregningsresultatPerioder(List.of(periode1, periode2, periode3))
+                .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
+                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+                .medErForelder1(true)
+                .medAntallDagerFeriepenger(60)
+                .build();
 
         RegelBeregnFeriepenger regel = new RegelBeregnFeriepenger();
         Evaluation evaluation = regel.evaluer(regelModell);
@@ -217,8 +221,8 @@ public class RegelBeregnFeriepengerTest {
         assertThat(regelModell.getFeriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 1, 17));
         assertThat(regelModell.getFeriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 4, 4));
 
-        assertThat(regelModell.getBeregningsresultatPerioder().stream().flatMap(p->p.getBeregningsresultatAndelList().stream())
-            .flatMap(a->a.getBeregningsresultatFeriepengerPrÅrListe().stream()).collect(Collectors.toList())).hasSize(6);
+        assertThat(regelModell.getBeregningsresultatPerioder().stream().flatMap(p -> p.getBeregningsresultatAndelList().stream())
+                .flatMap(a -> a.getBeregningsresultatFeriepengerPrÅrListe().stream()).collect(Collectors.toList())).hasSize(6);
         periode1.getBeregningsresultatAndelList().forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
         periode2.getBeregningsresultatAndelList().forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).isEmpty());
         periode3.getBeregningsresultatAndelList().forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
@@ -232,35 +236,37 @@ public class RegelBeregnFeriepengerTest {
 
         assertThat(andelBruker1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(1606.5));
         assertThat(andelBruker2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(459));
-        assertThat(andelArbeidsgiver1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2754));
-        assertThat(andelArbeidsgiver2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(2295));
+        assertThat(andelArbeidsgiver1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
+                .isEqualByComparingTo(BigDecimal.valueOf(2754));
+        assertThat(andelArbeidsgiver2.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp())
+                .isEqualByComparingTo(BigDecimal.valueOf(2295));
         assertThat(andelBruker4.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(178.5));
         assertThat(andelArbeidsgiver4.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(306));
     }
 
-    //Eksempel 2 Far
+    // Eksempel 2 Far
     @Test
     public void skalBeregneFeriepengerForFarEksempel2() {
         BeregningsresultatPeriode periode1 = byggBRPeriode(LocalDate.of(2018, 3, 21), LocalDate.of(2018, 4, 15));
         byggAndelerForPeriode(periode1, 150, 400, arbeidsforhold1);
 
         BeregningsresultatPeriode periode1annenPart = byggBRPeriode(LocalDate.of(2018, 1, 17), LocalDate.of(2018, 3, 20));
-        BeregningsresultatPeriode periode2annenPart  = byggBRPeriode(LocalDate.of(2018, 3, 21), LocalDate.of(2018, 3, 28));
-        BeregningsresultatPeriode periode3annenPart  = byggBRPeriode(LocalDate.of(2018, 3, 29), LocalDate.of(2018, 4, 8));
+        BeregningsresultatPeriode periode2annenPart = byggBRPeriode(LocalDate.of(2018, 3, 21), LocalDate.of(2018, 3, 28));
+        BeregningsresultatPeriode periode3annenPart = byggBRPeriode(LocalDate.of(2018, 3, 29), LocalDate.of(2018, 4, 8));
         byggAndelerForPeriode(periode1annenPart, 500, 0, arbeidsforhold1);
         byggAndelerForPeriode(periode2annenPart, 0, 0, arbeidsforhold1);
         byggAndelerForPeriode(periode3annenPart, 500, 0, arbeidsforhold1);
         List<BeregningsresultatPeriode> annenPartsBeregningsresultatPerioder = List.of(periode1annenPart, periode2annenPart, periode3annenPart);
 
         BeregningsresultatFeriepengerRegelModell regelModell = BeregningsresultatFeriepengerRegelModell.builder()
-            .medBeregningsresultatPerioder(List.of(periode1))
-            .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
-            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-            .medErForelder1(false)
-            .medAntallDagerFeriepenger(60)
-            .build();
+                .medBeregningsresultatPerioder(List.of(periode1))
+                .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
+                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+                .medErForelder1(false)
+                .medAntallDagerFeriepenger(60)
+                .build();
 
         RegelBeregnFeriepenger regel = new RegelBeregnFeriepenger();
         Evaluation evaluation = regel.evaluer(regelModell);
@@ -270,8 +276,8 @@ public class RegelBeregnFeriepengerTest {
         assertThat(regelModell.getFeriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 1, 17));
         assertThat(regelModell.getFeriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 4, 3));
 
-        assertThat(regelModell.getBeregningsresultatPerioder().stream().flatMap(p->p.getBeregningsresultatAndelList().stream())
-            .flatMap(a->a.getBeregningsresultatFeriepengerPrÅrListe().stream()).collect(Collectors.toList())).hasSize(2);
+        assertThat(regelModell.getBeregningsresultatPerioder().stream().flatMap(p -> p.getBeregningsresultatAndelList().stream())
+                .flatMap(a -> a.getBeregningsresultatFeriepengerPrÅrListe().stream()).collect(Collectors.toList())).hasSize(2);
         periode1.getBeregningsresultatAndelList().forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
 
         BeregningsresultatAndel andelBruker1 = periode1.getBeregningsresultatAndelList().get(0);
@@ -283,7 +289,7 @@ public class RegelBeregnFeriepengerTest {
 
     @Test
     public void skalBeregneFeriepengerOverFlereÅr() {
-        BeregningsresultatPeriode periode1 = byggBRPeriode(LocalDate.of(2018, 11, 1), LocalDate.of(2019, 1, 5)); //47 ukedager
+        BeregningsresultatPeriode periode1 = byggBRPeriode(LocalDate.of(2018, 11, 1), LocalDate.of(2019, 1, 5)); // 47 ukedager
         BeregningsresultatPeriode periode2 = byggBRPeriode(LocalDate.of(2019, 1, 6), LocalDate.of(2019, 2, 5)); // 22 ukedager
         BeregningsresultatPeriode periode3 = byggBRPeriode(LocalDate.of(2019, 2, 6), LocalDate.of(2019, 4, 16)); // 50 ukedager
         byggAndelerForPeriode(periode1, 1000, 0, arbeidsforhold1);
@@ -295,14 +301,14 @@ public class RegelBeregnFeriepengerTest {
         List<BeregningsresultatPeriode> annenPartsBeregningsresultatPerioder = List.of(periode1annenPart);
 
         BeregningsresultatFeriepengerRegelModell regelModell = BeregningsresultatFeriepengerRegelModell.builder()
-            .medBeregningsresultatPerioder(List.of(periode1, periode2, periode3))
-            .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
-            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.SJØMANN))
-            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_80)
-            .medErForelder1(true)
-            .medAntallDagerFeriepenger(60)
-            .build();
+                .medBeregningsresultatPerioder(List.of(periode1, periode2, periode3))
+                .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
+                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.SJØMANN))
+                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_80)
+                .medErForelder1(true)
+                .medAntallDagerFeriepenger(60)
+                .build();
 
         RegelBeregnFeriepenger regel = new RegelBeregnFeriepenger();
         Evaluation evaluation = regel.evaluer(regelModell);
@@ -312,9 +318,12 @@ public class RegelBeregnFeriepengerTest {
         assertThat(regelModell.getFeriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 11, 1));
         assertThat(regelModell.getFeriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2019, 2, 21));
 
-        regelModell.getBeregningsresultatPerioder().get(0).getBeregningsresultatAndelList().forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(2));
-        regelModell.getBeregningsresultatPerioder().get(1).getBeregningsresultatAndelList().forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).isEmpty());
-        regelModell.getBeregningsresultatPerioder().get(2).getBeregningsresultatAndelList().forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
+        regelModell.getBeregningsresultatPerioder().get(0).getBeregningsresultatAndelList()
+                .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(2));
+        regelModell.getBeregningsresultatPerioder().get(1).getBeregningsresultatAndelList()
+                .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).isEmpty());
+        regelModell.getBeregningsresultatPerioder().get(2).getBeregningsresultatAndelList()
+                .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
         BeregningsresultatAndel andelBruker1 = periode1.getBeregningsresultatAndelList().get(0);
         BeregningsresultatAndel andelBruker2 = periode3.getBeregningsresultatAndelList().get(0);
         BeregningsresultatAndel andelArbeidsgiver = periode3.getBeregningsresultatAndelList().get(1);
@@ -328,18 +337,18 @@ public class RegelBeregnFeriepengerTest {
 
     @Test
     public void skalBeregneFeriepengerUtenAnnenpart() {
-        BeregningsresultatPeriode periode1 = byggBRPeriode(LocalDate.of(2018, 11, 1), LocalDate.of(2018, 12, 31)); //43 ukedager
+        BeregningsresultatPeriode periode1 = byggBRPeriode(LocalDate.of(2018, 11, 1), LocalDate.of(2018, 12, 31)); // 43 ukedager
         byggAndelerForPeriode(periode1, 1000, 0, arbeidsforhold1);
 
         BeregningsresultatFeriepengerRegelModell regelModell = BeregningsresultatFeriepengerRegelModell.builder()
-            .medBeregningsresultatPerioder(List.of(periode1))
-            .medAnnenPartsBeregningsresultatPerioder(Collections.emptyList())
-            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medAnnenPartsInntektskategorier(Collections.emptySet())
-            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-            .medErForelder1(true)
-            .medAntallDagerFeriepenger(60)
-            .build();
+                .medBeregningsresultatPerioder(List.of(periode1))
+                .medAnnenPartsBeregningsresultatPerioder(Collections.emptyList())
+                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medAnnenPartsInntektskategorier(Collections.emptySet())
+                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+                .medErForelder1(true)
+                .medAntallDagerFeriepenger(60)
+                .build();
 
         RegelBeregnFeriepenger regel = new RegelBeregnFeriepenger();
         Evaluation evaluation = regel.evaluer(regelModell);
@@ -349,7 +358,8 @@ public class RegelBeregnFeriepengerTest {
         assertThat(regelModell.getFeriepengerPeriode().getFomDato()).isEqualTo(LocalDate.of(2018, 11, 1));
         assertThat(regelModell.getFeriepengerPeriode().getTomDato()).isEqualTo(LocalDate.of(2018, 12, 31));
 
-        regelModell.getBeregningsresultatPerioder().get(0).getBeregningsresultatAndelList().forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
+        regelModell.getBeregningsresultatPerioder().get(0).getBeregningsresultatAndelList()
+                .forEach(andel -> assertThat(andel.getBeregningsresultatFeriepengerPrÅrListe()).hasSize(1));
         BeregningsresultatAndel andelBruker1 = periode1.getBeregningsresultatAndelList().get(0);
 
         assertThat(andelBruker1.getBeregningsresultatFeriepengerPrÅrListe().get(0).getÅrsbeløp()).isEqualByComparingTo(BigDecimal.valueOf(4386));
@@ -364,14 +374,14 @@ public class RegelBeregnFeriepengerTest {
 
         List<BeregningsresultatPeriode> annenPartsBeregningsresultatPerioder = List.of();
         BeregningsresultatFeriepengerRegelModell regelModell = BeregningsresultatFeriepengerRegelModell.builder()
-            .medBeregningsresultatPerioder(List.of(periode1, periode2))
-            .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
-            .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
-            .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
-            .medErForelder1(true)
-            .medAntallDagerFeriepenger(64) //SVP-spesifikt
-            .build();
+                .medBeregningsresultatPerioder(List.of(periode1, periode2))
+                .medAnnenPartsBeregningsresultatPerioder(annenPartsBeregningsresultatPerioder)
+                .medInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medAnnenPartsInntektskategorier(Collections.singleton(Inntektskategori.ARBEIDSTAKER))
+                .medDekningsgrad(Dekningsgrad.DEKNINGSGRAD_100)
+                .medErForelder1(true)
+                .medAntallDagerFeriepenger(64) // SVP-spesifikt
+                .build();
 
         RegelBeregnFeriepenger regel = new RegelBeregnFeriepenger();
         Evaluation evaluation = regel.evaluer(regelModell);
@@ -384,30 +394,29 @@ public class RegelBeregnFeriepengerTest {
 
     private BeregningsresultatPeriode byggBRPeriode(LocalDate fom, LocalDate tom) {
         return BeregningsresultatPeriode.builder()
-            .medPeriode(new LocalDateInterval(fom, tom))
-            .build();
+                .medPeriode(new LocalDateInterval(fom, tom))
+                .build();
     }
 
     private void byggAndelerForPeriode(BeregningsresultatPeriode periode, int dagsats, int refusjon, Arbeidsforhold arbeidsforhold1) {
         BeregningsresultatAndel.builder()
-            .medDagsats((long)dagsats)
-            .medDagsatsFraBg((long)dagsats)
-            .medAktivitetStatus(AktivitetStatus.ATFL)
-            .medInntektskategori(Inntektskategori.ARBEIDSTAKER)
-            .medBrukerErMottaker(true)
-            .medArbeidsforhold(arbeidsforhold1)
-            .build(periode);
-        if (refusjon > 0) {
-            BeregningsresultatAndel.builder()
-                .medDagsats((long)refusjon)
-                .medDagsatsFraBg((long)refusjon)
+                .medDagsats((long) dagsats)
+                .medDagsatsFraBg((long) dagsats)
                 .medAktivitetStatus(AktivitetStatus.ATFL)
                 .medInntektskategori(Inntektskategori.ARBEIDSTAKER)
-                .medBrukerErMottaker(false)
+                .medBrukerErMottaker(true)
                 .medArbeidsforhold(arbeidsforhold1)
                 .build(periode);
+        if (refusjon > 0) {
+            BeregningsresultatAndel.builder()
+                    .medDagsats((long) refusjon)
+                    .medDagsatsFraBg((long) refusjon)
+                    .medAktivitetStatus(AktivitetStatus.ATFL)
+                    .medInntektskategori(Inntektskategori.ARBEIDSTAKER)
+                    .medBrukerErMottaker(false)
+                    .medArbeidsforhold(arbeidsforhold1)
+                    .build(periode);
         }
     }
-
 
 }
